@@ -1,6 +1,7 @@
 Current Release
 - Made it possible to use other authentication methods other than LDAP.
 - Removed the rest of LDAP traces.
+- Made ldap import from roster_server first, then current directory.
 
 2009-09-23 release-0.5
 - Made trunk install as version 0.1
